Fix empty list value for dns_config test variable
Job
https://github.com/ScaleComputing/HyperCoreAnsibleCollection/actions/runs/4143028523/jobs/7164432484
was run with

```
dns_config:
  search_domains: ""
```

and failed with

```
   TASK [dns_config : Create a desired DNS config] ********************************
  fatal: [testhost]: FAILED! => {"msg": "Unexpected templating type error occurred on ({{ dns_config.search_domains | list }}): 'NoneType' object is not iterable"}
```

With

```
dns_config:
  search_domains: []
```

and success in job
https://github.com/ScaleComputing/HyperCoreAnsibleCollection/actions/runs/4163922777/jobs/7205764194


Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/integration_config.yml.template
+++ b/tests/integration/integration_config.yml.template
@@ -29,7 +29,7 @@ sc_config:
       dns_servers:
         - 1.1.1.1
         - 1.0.0.1
-      search_domains: ""
+      search_domains: []
     registration:
       company_name: Scale Computing
       contact: <firstname secondname>
