Revert NTP time server after testing
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/time_server/tasks/main.yml
+++ b/tests/integration/targets/time_server/tasks/main.yml
@@ -9,3 +9,7 @@
   block:
     - include_tasks: 01_time_server_info.yml
     - include_tasks: 02_time_server.yml
+  always:
+    - include_tasks: helper_api_time_server_reset.yml
+      vars:
+        time_server_config: "{{ sc_config[sc_host].time_server }}"
