--- a/tests/integration/targets/time_zone/tasks/02_time_zone.yml
+++ b/tests/integration/targets/time_zone/tasks/02_time_zone.yml
@@ -4,27 +4,25 @@
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
 
+  vars:
+    time_zone_a: "Europe/Ljubljana"
+    time_zone_b: "Europe/Zagreb"
+    actual_uuid: "timezone_guid"
+
   block:
-    - name: Get default configs
-      scale_computing.hypercore.api:
-        action: get
-        endpoint: /rest/v1/TimeZone/timezone_guid
-      register: time_zone
-    - ansible.builtin.set_fact:
-        actual_zone: "{{ time_zone.record.0.timeZone }}"  # US/Eastern
-        actual_uuid: "{{ time_zone.record.0.uuid }}"
+#    - name: Set initial state
+#      scale_computing.hypercore.api:
+#        action: post
+#        endpoint: /rest/v1/TimeZone/timezone_guid
+#        data:
+#          timeZone: "Europe/Zagreb"
 
-    # ------------------------------------------------
-    - name: Set initial state
-      scale_computing.hypercore.api:
-        action: post
-        endpoint: /rest/v1/TimeZone/timezone_guid
-        data:
-          timeZone: "Europe/Zagreb"
+    - name: Remove all TimeZone objects
+      include_tasks: helper_api_time_zone_delete_all.yml
 
-    - name: Change time zone
+    - name: Create TimeZone object
       scale_computing.hypercore.time_zone:
-        zone: Europe/Ljubljana
+        zone: "{{ time_zone_b }}"
       register: result
     - scale_computing.hypercore.time_zone_info:
       register: info
@@ -32,12 +30,12 @@
         that:
           - result.changed == True
           - result.diff.before != result.diff.after
-          - info.record.time_zone == "Europe/Ljubljana"
+          - info.record.time_zone == time_zone_b
           - info.record.uuid == actual_uuid
 
-    - name: Update with time zone from previous task
+    - name: Create TimeZone object - idempotence
       scale_computing.hypercore.time_zone:
-        zone: Europe/Ljubljana
+        zone: "{{ time_zone_b }}"
       register: result
     - scale_computing.hypercore.time_zone_info:
       register: info
@@ -45,14 +43,31 @@
         that:
           - result.changed == False
           - result.diff.before == result.diff.after
-          - info.record.time_zone == "Europe/Ljubljana"
+          - info.record.time_zone == time_zone_b
           - info.record.uuid == actual_uuid
 
-    # ------------------------------------------------
+    - name: Change time zone
+      scale_computing.hypercore.time_zone:
+        zone: "{{ time_zone_a }}"
+      register: result
+    - scale_computing.hypercore.time_zone_info:
+      register: info
+    - ansible.builtin.assert:
+        that:
+          - result.changed == True
+          - result.diff.before != result.diff.after
+          - info.record.time_zone == time_zone_a
+          - info.record.uuid == actual_uuid
 
-    - name: Restore back to default
-      scale_computing.hypercore.api:
-        action: post
-        endpoint: /rest/v1/TimeZone/timezone_guid
-        data:
-          timeZone: "{{ actual_zone }}"
+    - name: Change time zone - idempotence
+      scale_computing.hypercore.time_zone:
+        zone: "{{ time_zone_a }}"
+      register: result
+    - scale_computing.hypercore.time_zone_info:
+      register: info
+    - ansible.builtin.assert:
+        that:
+          - result.changed == False
+          - result.diff.before == result.diff.after
+          - info.record.time_zone == time_zone_a
+          - info.record.uuid == actual_uuid
