--- a/tests/integration/targets/cluster_name/tasks/main.yml
+++ b/tests/integration/targets/cluster_name/tasks/main.yml
@@ -4,6 +4,8 @@
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
+  vars:
+    cluster_config: "{{ sc_config[sc_host].cluster }}"
 
   block:
     - name: Retrieve cluster name
@@ -49,12 +51,12 @@
           - cluster.record.name == "name_updated"
 
   always:
-    - name: Set back old cluster_name
+    - name: Set back the normal cluster_name
       scale_computing.hypercore.api:
         action: patch
         endpoint: /rest/v1/Cluster/{{ cluster_initial.record.uuid }}
         data:
-          clusterName: "{{ cluster_initial.record.name }}"
+          clusterName: "{{ cluster_config.name }}"
 
     - name: Get current cluster name
       scale_computing.hypercore.api:
