Rename cluster_name_info to cluster_info and add icos version

--- a/tests/integration/targets/cluster_info/tasks/main.yml
+++ b/tests/integration/targets/cluster_info/tasks/main.yml
@@ -7,9 +7,9 @@
 
   block:
     - name: Retrieve cluster name
-      scale_computing.hypercore.cluster_name_info:
+      scale_computing.hypercore.cluster_info:
       register: cluster
     - ansible.builtin.assert:
         that:
           - cluster.record != []
-          - cluster.record.keys() | sort == ['name', 'uuid']
+          - cluster.record.keys() | sort == ['icos_version', 'name', 'uuid']
