Revert email_alert configuration to value from integration_config.yml
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/integration_config.yml.template
+++ b/tests/integration/integration_config.yml.template
@@ -43,3 +43,5 @@ sc_config:
       use_auth: false
       auth_user: ""
       auth_password: ""
+    email_alert:
+      - someone@scalecomputing.com
