--- a/tests/integration/targets/email_alert/tasks/main.yml
+++ b/tests/integration/targets/email_alert/tasks/main.yml
@@ -3,172 +3,30 @@
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
-
+    SC_TIMEOUT: "{{ sc_timeout }}"
   vars:
-    new_email: new@test.com
-    create_email: test@test.com
+    email_alert_config: "{{ sc_config[sc_host].email_alert }}"
 
   block:
-    - name: Get starting emails
-      scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.set_fact:
-        starting_emails: "{{ info.records }}"
+    - include_tasks: 01_email_alert_info.yml
+    - include_tasks: 02_email_alert.yml
+  always:
+    - name: Get current email_alert
+      scale_computing.hypercore.api:
+        action: get
+        endpoint: /rest/v1/AlertEmailTarget
+      register: api_email_alert_result
 
-    - name: Prepare for test - cleanup (also test Remove with loop)
-      scale_computing.hypercore.email_alert:
-        email: "{{ item.email_address }}"
-        state: absent
-      loop: "{{ starting_emails }}"
-    - scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - info.records == []
-          - info.records|length == 0|int
+    - name: Remove current email_alert
+      scale_computing.hypercore.api:
+        action: delete
+        endpoint: /rest/v1/AlertEmailTarget/{{ item.uuid }}
+      loop: "{{ api_email_alert_result.record }}"
 
-    # -----------------------------------------------------------
-
-    - name: Create new Email Alert Recipient
-      scale_computing.hypercore.email_alert:
-        email: "{{ create_email }}"
-        state: present
-      register: result
-    - scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-    - ansible.builtin.assert: &test0
-        that:
-          - result.records != []
-          - result.records[0].keys() | sort ==
-            ['alert_tag_uuid', 'email_address', 'latest_task_tag',
-            'resend_delay', 'silent_period', 'uuid']
-          - info.records|length == 1|int
-          - info.records[0].email_address == "{{ create_email }}"
-
-    - name: Create new Email Alert Recipient - idempotence
-      scale_computing.hypercore.email_alert:
-        email: "{{ create_email }}"
-        state: present
-      register: result
-    - scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == False
-          - result.diff.before == result.diff.after
-    - ansible.builtin.assert: *test0
-
-    - name: Modify existing Email Alert Recipient
-      scale_computing.hypercore.email_alert:
-        email: "{{ create_email }}"
-        email_new: "{{ new_email }}"
-        state: present
-      register: result
-    - scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-    - ansible.builtin.assert: &test1
-        that:
-          - result.records != []
-          - result.records[0].keys() | sort ==
-            ['alert_tag_uuid', 'email_address', 'latest_task_tag',
-            'resend_delay', 'silent_period', 'uuid']
-          - info.records|length == 1|int
-
-    - name: Modify existing Email Alert Recipient - idempotence
-      scale_computing.hypercore.email_alert:
-        email: "{{ create_email }}"
-        email_new: "{{ new_email }}"
-        state: present
-      register: result
-    - scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == False
-          - result.diff.before == result.diff.after
-    - ansible.builtin.assert: *test1
-
-
-    - name: Modify existing Email Alert Recipient - with same emails
-      scale_computing.hypercore.email_alert:
-        email: "{{ new_email }}"
-        email_new: "{{ new_email }}"
-        state: present
-      register: result
-    - scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == False
-          - result.diff.before == result.diff.after
-          - info.records|length == 1|int
-          - result.records != []
-          - result.records[0].keys() | sort ==
-            ['alert_tag_uuid', 'email_address', 'latest_task_tag',
-            'resend_delay', 'silent_period', 'uuid']
-
-
-    - name: Send test email to an existing Email Alert Recipient
-      scale_computing.hypercore.email_alert:
-        email: "{{ new_email }}"
-        state: test
-      register: result
-    - scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.debug:
-        msg: "{{ result }}"
-    - ansible.builtin.assert:
-        that:
-          - result.changed == False
-          - result.diff.before == result.diff.after
-          - info.records|length == 1|int
-          - result.records != []
-          - result.records[0].keys() | sort ==
-            ['alert_tag_uuid', 'email_address', 'latest_task_tag',
-            'resend_delay', 'silent_period', 'uuid']
-
-
-    - name: Remove previously created Email Alert Recipient
-      scale_computing.hypercore.email_alert:
-        email: "{{ new_email }}"
-        state: absent
-      register: result
-    - scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-    - ansible.builtin.assert: &test2
-        that:
-          - info.records|length == 0|int
-          - result.records == []
-
-    - name: Remove previously created Email Alert Recipient - idempotence
-      scale_computing.hypercore.email_alert:
-        email: "{{ new_email }}"
-        state: absent
-      register: result
-    - scale_computing.hypercore.email_alert_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == False
-          - result.diff.before == result.diff.after
-    - ansible.builtin.assert: *test2
-
-    # -----------------------------------------------------------
-
-    - name: Restore back to default
-      scale_computing.hypercore.email_alert:
-        email: "{{ item.email_address }}"
-        state: present
-      loop: "{{ starting_emails }}"
+    - name: Create configured email_alert
+      scale_computing.hypercore.api:
+        action: post
+        endpoint: /rest/v1/AlertEmailTarget
+        data:
+          emailAddress: "{{ item }}"
+      loop: "{{ email_alert_config }}"
