--- a/tests/integration/targets/oidc_config/tasks/oidc_reset.yml
+++ b/tests/integration/targets/oidc_config/tasks/oidc_reset.yml
@@ -26,7 +26,7 @@
       sharedSecret: "{{ oidc_config.shared_secret }}"
       configurationURL: "{{ oidc_config.config_url }}"
       scopes: "{{ oidc_config.scopes }}"
-  ignore_errors: true # We always get BAD GATEWAY here for some reason
+  ignore_errors: true # We always get BAD GATEWAY here for some reason (Seems like API issue)
 
 - name: Wait N sec - Cluster needs to finish login
   ansible.builtin.pause:
